Documents/EKS/argocd/network-policy/argocd-application-controller-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"argocd-application-controller-network-policy","namespace":"gitops"},"spec":{"ingress":[{"from":[{"namespaceSelector":{}}],"ports":[{"port":8082}]}],"podSelector":{"matchLabels":{"app.kubernetes.io/name":"argocd-application-controller"}},"policyTypes":["Ingress"]}}
  creationTimestamp: "2024-04-11T19:36:10Z"
  generation: 1
  name: argocd-application-controller-network-policy
  namespace: gitops
  resourceVersion: "588548"
  uid: 2dd58a7c-8d6e-4c58-a4ae-ea7278ed6e39
spec:
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: 8082
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
  policyTypes:
  - Ingress
